--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -596,6 +596,15 @@ Skills_2
 .value-80 {
   width: 80%;
 }
+.value-90 {
+  width: 90%;
+}
+.value-75 {
+  width: 75%;
+}
+.value-85 {
+  width: 85%;
+}
 .skill-text {
   position: absolute;
   top: -2rem;
@@ -608,6 +617,15 @@ Skills_2
 }
 .skill-text-80 {
   left: 80%;
+}
+.skill-text-90 {
+  left: 90%;
+}
+.skill-text-75 {
+  left: 75%;
+}
+.skill-text-85 {
+  left: 85%;
 }
 
 /*--------------------------------------------------------------
